# ComfyUI_pixtral_large

./: pixtral_large_node.py  pyproject.toml
.github/workflows/: publish.yml
